kuber/consumer.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: consumer-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: consumer-service
  template:
    metadata:
      labels:
        app: consumer-service
    spec:
      containers:
        - name: consumer-service
          image: 'robertmaz/consumer'
---
apiVersion: v1
kind: Service
metadata:
  name: consumer-service
spec:
  selector:
    app: consumer-service
  ports:
    - protocol: TCP
      port: 8081
      targetPort: 8081
