kuber/kafka.yml
apiVersion: v1
kind: Service
metadata:
  name: kafka-service
  labels:
    app: kafka
spec:
  ports:
    - port: 9092
      targetPort: 9092
      protocol: TCP
      name: kafka-port
  selector:
    app: kafka
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kafka-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kafka
  template:
    metadata:
      labels:
        app: kafka
        name: kafka
    spec:
      containers:
        - name: kafka
          imagePullPolicy: Always
          image: wurstmeister/kafka:2.11-1.1.1
          volumeMounts:
            - mountPath: /kafka
              name: pvcvolume
          terminationMessagePolicy: FallbackToLogsOnError
      volumes:
        - name: pvcvolume
          persistentVolumeClaim:
            claimName: fileshare
# kafka-topics.sh --create --topic users --zookeeper zoo:2181 --partitions 3 --replication-factor 1
