kuber/producer.yml
apiVersion: v1
kind: Service
metadata:
  name: producer-service
spec:
  selector:
    app: producer-service
  ports:
      - port: 8080
        targetPort: 8080
  type: NodePort
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: producer-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: producer-service
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
  template:
    metadata:
      labels:
        app: producer-service
    spec:
      containers:
        - name: producer
          imagePullPolicy: IfNotPresent
          image: 'robertmaz/producer'
          resources:
            requests:
              cpu: 20m
              memory: 200Mi
            limits:
              cpu: 30m
              memory: 300Mi
