kuber/zookeeper.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: zookeeper
spec:
  replicas: 1
  selector:
    matchLabels:
      app: zookeeper
  template:
    metadata:
      labels:
        app: zookeeper
    spec:
      containers:
        - name: zookeeper
          image: digitalwonderland/zookeeper
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 2181
              hostPort: 2181
---
apiVersion: v1
kind: Service
metadata:
  name: zoo
  labels:
    app: zookeeper
spec:
  ports:
    - name: client
      port: 2181
      protocol: TCP
  selector:
    app: zookeeper
